--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"build-storybook": "storybook build"
 	},
 	"dependencies": {
+		"lucide-react": "^0.469.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"tailwind-merge": "^2.6.0",
