--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"build-storybook": "storybook build"
 	},
 	"dependencies": {
+		"date-fns": "^4.1.0",
 		"lucide-react": "^0.469.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -40,6 +41,8 @@
 		"eslint-plugin-storybook": "^0.11.1",
 		"globals": "^15.14.0",
 		"postcss": "^8.4.49",
+		"prettier": "^3.4.2",
+		"prettier-plugin-tailwindcss": "^0.6.9",
 		"storybook": "8.4.7",
 		"tailwindcss": "^3.4.17",
 		"typescript": "~5.6.2",
