--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"build-storybook": "storybook build"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"lucide-react": "^0.469.0",
 		"react": "^18.3.1",
